--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1749,4 +1749,6 @@
   <java-symbol type="dimen" name="subtitle_shadow_offset" />
   <java-symbol type="dimen" name="subtitle_outline_width" />
 
+  <!-- Wifi -->
+  <java-symbol type="bool" name="config_wifiApFirmwareReload" />
 </resources>
