Clock click actions
Options for single, long and double click

if double click never set or set to nothing there is no delay on single click

default action if never set is clock options just like stock.

Change-Id: Id4e86542cab9e84c8b4d6428de64cc318a409378
Signed-off-by: Stevespear426 <stephen.k.spear@gmail.com>

Conflicts:
	core/res/res/values/gummy_strings.xml
	core/res/res/values/symbols.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/PhoneStatusBar.java

Conflicts:
	core/res/res/values/gummy_symbols.xml

--- a/core/res/res/values/gummy_strings.xml
+++ b/core/res/res/values/gummy_strings.xml
@@ -56,4 +56,14 @@
     <string name="toast_rotation_unlocked">Display rotation unlocked</string>
     <string name="toast_rotation_locked">Display rotation locked</string>
 
+    <!-- GummyActions -->
+    <string name="action_assist">Search (Google Now)</string>
+    <string name="action_clockoptions">Clock options</string>
+    <string name="action_voiceassist">Voice search</string>
+    <string name="action_event">Event</string>
+    <string name="action_today">Today</string>
+    <string name="action_alarm">Alarm</string>
+    <string name="action_app">Custom App/Shortcut</string>
+    <string name="action_null">Blank</string>
+
 </resources>
