LockScreen: allow long-press actions from hardware keys (1/2)
Allow following actions with button long-presses on lockscreen:
- toggle flashlight (if available)
- play/pause/next/previous track selection
- toggle silent mode

Allow customizing of back, menu, and home buttons. Search
button events are completely ignored on the lockscreen.

Auto-detect hardware keys, only show appropriate menu
options based on the actual hardware keys available on the
device (or completely hide if there are no hardware keys).

Based largely on Danny Baumann's work from gingerbread.

Ported from CM10

Gummy
- home key lockscreen unlock

Change-Id: Iff32736d00ca5d4122f64a6a861bbb0a1de9cca9

Conflicts:
	policy/src/com/android/internal/policy/impl/keyguard/CarrierText.java
	policy/src/com/android/internal/policy/impl/keyguard/KeyguardViewManager.java

Conflicts:
	core/res/res/values/config.xml

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1330,4 +1330,7 @@
     <!-- Device has a h/w rotation lock switch -->
     <bool name="config_hasRotationLockSwitch">false</bool>
 
+    <!-- Disable the home key unlock setting -->
+    <bool name="config_disableHomeUnlockSetting">true</bool>
+
 </resources>
