--- a/core/res/res/values/gummy_symbols.xml
+++ b/core/res/res/values/gummy_symbols.xml
@@ -62,4 +62,7 @@
   <java-symbol type="string" name="action_null"/>
   <java-symbol type="string" name="action_app"/>
 
+  <!-- Lockscreen -->
+  <java-symbol type="bool" name="config_disableHomeUnlockSetting" />
+
 </resources>
