Frameworks: Port hardware key rebinding squahsed commit 0f cherry picks from Cyanogenmod:    Framework: Forward port Long press back to kill app db3817d    Hardware key custom rebinding (1/2) b055725    Framework: Bring Long press back kill app toast back 08641ec SlimRoms:    More options added to hardware key rebinding (1/2) 22bd763    Fix issue with hardware keys KEY ACTION comparisons. 4812ee5    Framework: Add Home/Back buttons available for rebinding (1/2) 5f20d08
removed code for hardware key expanded desktop actions
removed code for hardware key notification shade toggle

--- a/core/res/res/values/gummy_strings.xml
+++ b/core/res/res/values/gummy_strings.xml
@@ -48,4 +48,8 @@
 
     <!-- label for item that opens the profile choosing dialog -->
     <string name="global_action_choose_profile">Profile</string>
+
+    <!-- Long-press back kill application -->
+    <string name="app_killed_message">Application killed</string>
+
 </resources>
