--- a/packages/SystemUI/res/layout/navigation_bar.xml
+++ b/packages/SystemUI/res/layout/navigation_bar.xml
@@ -71,7 +71,7 @@
             <com.android.systemui.statusbar.policy.KeyButtonView android:id="@+id/menu_left"
                 android:layout_width="40dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_sysbar_menu"
+                android:src="@drawable/ic_sysbar_menu_big"
                 systemui:keyCode="82"
                 android:layout_weight="0"
                 android:contentDescription="@string/accessibility_menu"
@@ -122,7 +122,7 @@
             <com.android.systemui.statusbar.policy.KeyButtonView android:id="@+id/menu"
                 android:layout_width="@dimen/navigation_menu_key_width"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_sysbar_menu"
+                android:src="@drawable/ic_sysbar_menu_big"
                 systemui:keyCode="82"
                 android:layout_weight="0"
                 android:visibility="invisible"
