Add support for HW Rotation Lock
Forward ported from jellybean

Change-Id: I75fb9fa33541eb6acedd62a67e74977b36768390

Conflicts:
	core/res/res/values/symbols.xml
	services/java/com/android/server/SystemServer.java

Conflicts:
	core/res/res/values/strings.xml
	core/res/res/values/symbols.xml

--- a/core/res/res/values/gummy_strings.xml
+++ b/core/res/res/values/gummy_strings.xml
@@ -52,4 +52,8 @@
     <!-- Long-press back kill application -->
     <string name="app_killed_message">Application killed</string>
 
+    <!-- Hardware Rotation lock string -->
+    <string name="toast_rotation_unlocked">Display rotation unlocked</string>
+    <string name="toast_rotation_locked">Display rotation locked</string>
+
 </resources>
