--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1324,4 +1324,7 @@
          kill the foreground app. -->
     <integer name="config_backKillTimeout">2000</integer>
 
+    <!-- Device has a h/w rotation lock switch -->
+    <bool name="config_hasRotationLockSwitch">false</bool>
+
 </resources>
