--- a/core/res/res/values/gummy_symbols.xml
+++ b/core/res/res/values/gummy_symbols.xml
@@ -50,4 +50,7 @@
   <java-symbol type="string" name="toast_rotation_locked" />
   <java-symbol type="bool" name="config_hasRotationLockSwitch" />
 
+  <!-- Config IME switcher -->
+  <java-symbol type="bool" name="config_show_IMESwitcher" />
+
 </resources>
