--- a/core/res/res/values/gummy_symbols.xml
+++ b/core/res/res/values/gummy_symbols.xml
@@ -82,4 +82,11 @@
   <!-- Lockscreen -->
   <java-symbol type="bool" name="config_disableHomeUnlockSetting" />
 
+  <!-- Power menu -->
+  <java-symbol type="color"  name="power_menu_icon_default_color" />
+  <java-symbol type="color"  name="power_menu_text_default_color" />
+  <java-symbol type="id" name="icon1" />
+  <java-symbol type="id" name="icon2" />
+  <java-symbol type="id" name="icon3" />
+
 </resources>
