--- a/packages/Keyguard/res/values/gummy_symbols.xml
+++ b/packages/Keyguard/res/values/gummy_symbols.xml
@@ -19,5 +19,5 @@
 
   <!-- Lockscreen -->
   <java-symbol type="id" name="expand_challenge_handle" />
-
+  <java-symbol type="id" name="app_widget_container_carousel" />
 </resources>
