--- a/packages/SettingsProvider/res/values/defaults.xml
+++ b/packages/SettingsProvider/res/values/defaults.xml
@@ -191,4 +191,7 @@
     <!-- Default setting for menu overflow button -->
     <integer name="def_menu_overflow">1</integer>
 
+    <!-- Default for Settings.System.LOCKSCREEN_TARGETS. -->
+    <string name="def_lockscreen_targets" translatable="false"></string>
+
 </resources>
