Revert "Add SMS Middleware layer."
This reverts commit 79eaabf5a0aca695356c6c27c162c7fabd847ac5.

Conflicts:
	core/res/AndroidManifest.xml
	core/res/res/values/demented_strings.xml
	services/java/com/android/server/am/ActivityManagerService.java

--- a/core/res/res/values/demented_strings.xml
+++ b/core/res/res/values/demented_strings.xml
@@ -81,13 +81,6 @@
     <!-- Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
     <string name="permdesc_cancelNotifications">Allows the app to cancel notifications created by other apps.</string>
 
-    <!-- Title of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
-    <string name="permlab_interceptSmsSent">intercept outgoing SMS</string>
-    <!-- Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
-    <string name="permdesc_interceptSmsSent">Allows the app to
-        intercept an outgoing SMS.
-        Malicious apps may use this to prevent outgoing SMS messages.</string>
-
     <!-- Awesome Action Stuff-->
     <string name="action_home">Home</string>
     <string name="action_back">Back</string>
@@ -140,4 +133,10 @@
 
     <!-- Notification for Expanded desktop default -->
     <string name="expanded_mode_default_set">Expanded desktop set to hide StatusBar only. Configure in Power menu settings</string>
+
+    <!-- Privacy Guard -->
+    <string name="permlab_changePrivacyGuardState">enable or disable privacy guard</string>
+    <string name="permdesc_changePrivacyGuardState">Allows the application to change whether another application runs with Privacy Guard. When an application is running with Privacy Guard, it will not have access to personal data such as contacts, call logs, or messages.</string>
+    <string name="privacy_guard_notification">Privacy Guard active</string>
+    <string name="privacy_guard_notification_detail"><xliff:g id="app">%1$s</xliff:g> will not be able to access personal data</string>
 </resources>
